--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "mitulgolakiya/laravel-api-generator": "1.3.*",
         "acacha/admin-lte-template-laravel": "2.*",
         "yohang88/letter-avatar": "^1.0",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "5.2.x-dev",
+        "whossun/laravel-toastr": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
