--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "yohang88/letter-avatar": "^1.0",
         "zizaco/entrust": "5.2.x-dev",
         "whossun/laravel-toastr": "^1.0",
-        "intervention/image": "^2.4"
+        "intervention/image": "^2.4",
+        "barryvdh/laravel-dompdf": "^0.8.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
