--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "^5.2.0",
-        "mitulgolakiya/laravel-api-generator": "1.3.*",
+        //"mitulgolakiya/laravel-api-generator": "1.3.*",
         "acacha/admin-lte-template-laravel": "2.*",
         "yohang88/letter-avatar": "^1.0",
         "zizaco/entrust": "5.2.x-dev",
