--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
+        "laravelcollective/html": "^5.2.0",
         "mitulgolakiya/laravel-api-generator": "1.3.*",
         "acacha/admin-lte-template-laravel": "2.*",
         "yohang88/letter-avatar": "^1.0",
