--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=base64:nP+Vs+W4ufSyCsGtmbPBgRDjjEbD+vBXFZPnbI+8CWo=
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=avanza
