--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "zizaco/entrust": "5.2.x-dev",
         "whossun/laravel-toastr": "^1.0",
         "intervention/image": "^2.4",
-        "barryvdh/laravel-dompdf": "^0.8.0"
+        "barryvdh/laravel-dompdf": "^0.8.0",
+        "nesbot/carbon": "^1.22",
+        "jenssegers/date": "^3.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
