--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "barryvdh/laravel-dompdf": "^0.8.0",
         "nesbot/carbon": "^1.22",
         "jenssegers/date": "^3.2",
-        "doctrine/dbal": "2.5.1"
+        "doctrine/dbal": "2.5.1",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
