--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "nesbot/carbon": "^1.22",
         "jenssegers/date": "^3.2",
         "doctrine/dbal": "2.5.1",
-        "maatwebsite/excel": "~2.1.0"
+        "maatwebsite/excel": "~2.1.0",
+        "kim/activity": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
