--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "jenssegers/date": "^3.2",
         "doctrine/dbal": "2.5.1",
         "maatwebsite/excel": "~2.1.0",
-        "kim/activity": "^1.1"
+        "kim/activity": "^1.1",
+        "yajra/laravel-datatables-oracle": "~6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
